# plover_italian_stentura

./: README.rst  plover_italian_stentura.py  setup.cfg  setup.py  test.py  test_stentura_it.py
