[metadata]
name = plover_italian_stentura
version = 0.5.2
description = Italian Stentura support for Plover
long_description = file: README.rst
author = Benoit Pierre
author_email = benoit.pierre@gmail.com
license = GNU General Public License v2 or later (GPLv2+)
url = https://github.com/benoit-pierre/plover_italian_stentura
classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
keywords = plover

[options]
zip_safe = True
setup_requires =
	setuptools>=30.3.0
	setuptools-scm
test_loader = unittest:TestLoader
tests_require =
	mock
install_requires =
	plover>=4.0.0.dev0
packages =
	.

[options.entry_points]
plover.machine =
	Stentura (Italian version) = plover_italian_stentura:ItalianStentura

[bdist_wheel]
universal = 1

# vim: commentstring=#\ %s list
